Fixed single family and townhome spacing issues, link spacing.

--- a/css/theme.css
+++ b/css/theme.css
@@ -12045,7 +12045,7 @@ h2, .h2 {
 .homes-description {
   margin-top: 30px; }
   .homes-description .green-link {
-    margin-top: 30px; }
+    margin-bottom: 10px; }
 
 .green-arrow {
   position: relative;
@@ -12061,16 +12061,18 @@ h2, .h2 {
 
 #more-details {
   padding-top: 1rem;
-  padding-bottom: 4rem;
   padding-right: 40px; }
   #more-details .image-block {
-    margin: 30px 20px 0 0;
+    margin: 20px 20px 10px 0;
     width: 100%;
     height: 100%; }
+  #more-details .page-block-wrapper:first-child {
+    margin-bottom: 2rem; }
 
 #homes-video {
   padding-bottom: 1.5rem;
-  background: rgba(161, 164, 167, 0.31); }
+  background: rgba(161, 164, 167, 0.31);
+  margin-top: 40px; }
   #homes-video #video-block {
     text-align: right; }
     #homes-video #video-block .video-wrap {
@@ -12142,6 +12144,14 @@ h2, .h2 {
 
 .green-link-wrap {
   text-align: center; }
+
+.more-details-copyright {
+  font-family: 'rm_prolight_italic';
+  font-size: 16px;
+  margin-top: 20px; }
+
+.pad-top-zero {
+  padding-top: 0 !important; }
 
 /****************************************
 *  Footer Styles
@@ -12464,9 +12474,11 @@ h2, .h2 {
   .solo-image {
     height: 100%; }
   .house-block {
-    margin-bottom: 3rem; }
+    margin-bottom: 2rem; }
   .white-border {
-    border-bottom: 6px solid #fff; } }
+    border-bottom: 6px solid #fff; }
+  .homes-description .green-link {
+    margin-top: 10px; } }
 
 @media screen and (max-width: 992px) {
   .stickied #menu-modal-wrap {
@@ -12631,6 +12643,8 @@ h2, .h2 {
     font-size: 1.8rem; }
   .button-bar h3, #more-details h2, #homes-video h2 {
     font-size: 3rem; }
+  #more-details h2 {
+    margin-bottom: 2rem; }
   #homes-video {
     padding-top: 1rem;
     padding-bottom: 2rem; }
@@ -12638,7 +12652,11 @@ h2, .h2 {
       margin-bottom: 2rem;
       height: 30vw; }
   #nav-lang li a {
-    font-size: 0.8rem; } }
+    font-size: 0.8rem; }
+  .more-details-copyright {
+    font-size: 18px; }
+  .homes-description .green-link {
+    margin-bottom: 0px; } }
 
 @media screen and (min-width: 1360px) {
   #home-section-5 img {
