--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -839,7 +839,7 @@ h2, .h2 {
 .homes-description {
     margin-top: 30px;
     .green-link {
-        margin-top: 30px;
+        margin-bottom: 10px;
     }
 }
 
@@ -857,18 +857,21 @@ h2, .h2 {
 }
 #more-details {
     padding-top: 1rem;
-    padding-bottom: 4rem;
     padding-right: 40px;
     .image-block {
-        margin: 30px 20px 0 0;
+        margin: 20px 20px 10px 0;
         width: 100%;
         height: 100%;
+    }
+    .page-block-wrapper:first-child() {
+        margin-bottom: 2rem;
     }
 }
 
 #homes-video {
     padding-bottom: 1.5rem;
     background: rgba(161,164,167,.31);
+    margin-top: 40px;
     #video-block {
         text-align: right;
         .video-wrap {
@@ -933,6 +936,15 @@ h2, .h2 {
 }
 .green-link-wrap {
     text-align: center;
+}
+
+.more-details-copyright {
+    font-family: 'rm_prolight_italic';
+    font-size: 16px;
+    margin-top: 20px;
+}
+.pad-top-zero {
+    padding-top: 0!important;
 }
 
 /****************************************
@@ -1400,11 +1412,16 @@ h2, .h2 {
     }
     
     .house-block {
-        margin-bottom: 3rem;
+        margin-bottom: 2rem;
     }
     
     .white-border {
         border-bottom: 6px solid #fff;
+    }
+    .homes-description {
+        .green-link {
+            margin-top: 10px;
+        }
     }
 }
 
@@ -1616,6 +1633,9 @@ h2, .h2 {
     .button-bar h3, #more-details h2, #homes-video h2 {
         font-size: 3rem;
     }
+    #more-details h2 {
+        margin-bottom: 2rem;
+    }
     
     #homes-video {
         padding-top: 1rem;
@@ -1633,6 +1653,14 @@ h2, .h2 {
             a {
                 font-size: 0.8rem;
             }
+        }
+    }
+    .more-details-copyright {
+        font-size: 18px;
+    }
+    .homes-description {
+        .green-link {
+            margin-bottom: 0px;
         }
     }
 }
